--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@feathersjs/express": "^1.3.1",
     "@feathersjs/feathers": "^3.3.1",
     "@feathersjs/socketio": "^3.2.9",
+    "@google/maps": "^0.5.5",
     "bcrypt": "^3.0.6",
     "camelcase": "^5.3.1",
     "fast-crc32c": "^1.0.4",
