--- a/package.json
+++ b/package.json
@@ -10,20 +10,13 @@
   "author": "Oskang09",
   "license": "ISC",
   "dependencies": {
-    "@feathers-plus/batch-loader": "^0.3.6",
-    "@feathersjs/authentication": "^2.1.16",
-    "@feathersjs/authentication-jwt": "^2.0.10",
-    "@feathersjs/express": "^1.3.1",
-    "@feathersjs/feathers": "^3.3.1",
-    "@feathersjs/socketio": "^3.2.9",
     "@google/maps": "^0.5.5",
     "bcrypt": "^3.0.6",
     "camelcase": "^5.3.1",
     "fast-crc32c": "^1.0.4",
-    "fastest-validator": "^0.6.17",
-    "feathers-authentication-custom": "^0.1.0",
-    "feathers-hooks-common": "^4.20.7",
-    "feathers-sequelize": "^5.1.3",
+    "fastify": "^2.5.0",
+    "fastify-cors": "^2.1.3",
+    "fastify-helmet": "^3.0.1",
     "firebase-admin": "^7.3.0",
     "glob": "^7.1.3",
     "module-alias": "^2.2.0",
@@ -44,12 +37,6 @@
   },
   "_moduleAliases": {
     "@config": "./config",
-    "@register": "./tasks",
-    "@actions": "./util/actions",
-    "@batch": "./util/batch",
-    "@hooks": "./util/hook",
-    "@getters": "./util/getter",
-    "@utils": "./util/utility",
-    "@checkers": "./util/boolean"
+    "@plugin": "./plugin"
   }
 }
