--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
   "author": "Oskang09",
   "license": "ISC",
   "dependencies": {
-    "@google/maps": "^0.5.5",
     "bcrypt": "^3.0.6",
     "camelcase": "^5.3.1",
     "fast-crc32c": "^1.0.4",
     "fastify": "^2.5.0",
     "fastify-cors": "^2.1.3",
     "fastify-helmet": "^3.0.1",
+    "fastify-plugin": "^1.6.0",
     "firebase-admin": "^7.3.0",
     "glob": "^7.1.3",
+    "got": "^9.6.0",
     "module-alias": "^2.2.0",
     "moment": "^2.24.0",
     "nodemailer": "^6.2.1",
