--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "koa-bodyparser": "^4.2.1",
     "koa-helmet": "^4.2.0",
     "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0",
     "koa-views": "^6.2.0",
     "moment": "^2.24.0",
     "pg": "^7.11.0",
