--- a/package.json
+++ b/package.json
@@ -10,21 +10,22 @@
   "author": "Oskang09",
   "license": "ISC",
   "dependencies": {
+    "babel-core": "^6.26.3",
     "babel-preset-react": "^6.24.1",
     "eslint": "^6.0.1",
-    "nodemon": "^1.19.1",
-    "babel-core": "^6.26.3",
     "firebase-admin": "^8.2.0",
     "glob": "^7.1.4",
     "joi": "^14.3.1",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
+    "koa-favicon": "^2.0.1",
     "koa-helmet": "^4.2.0",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "koa-views": "^6.2.0",
     "koa2-formidable": "^1.0.2",
     "moment": "^2.24.0",
+    "nodemon": "^1.19.1",
     "pg": "^7.11.0",
     "pg-hstore": "^2.3.3",
     "react": "^16.8.6",
